# inferall

./: .gitignore  README.md  pyproject.toml
docs/: CNAME  index.html
inferall/: __init__.py  __main__.py  config.py  orchestrator.py
inferall/api/: server.py  websocket.py
inferall/auth/: key_store.py  middleware.py
inferall/backends/: asr_backend.py  base.py  classification_backend.py  diffusion_backend.py  embedding_backend.py  img2img_backend.py  llamacpp_backend.py  ollama_cloud_backend.py  rerank_backend.py  seq2seq_backend.py  transformers_backend.py  tts_backend.py  video_backend.py  vlm_backend.py
inferall/cli/: app.py
inferall/cli/commands/: keys.py  list_cmd.py  login.py  pull.py  (+4 more)
inferall/gpu/: allocator.py  manager.py
inferall/registry/: assistants_store.py  file_store.py  hf_resolver.py  jobs_store.py  metadata.py  ollama_resolver.py  registry.py
inferall/scheduling/: batcher.py  dispatcher.py  gpu_scheduler.py
inferall/tui/: __init__.py  __main__.py  app.py
tests/: test_api.py  test_api_multimodal.py  test_api_streaming.py  test_assistants_api.py  test_auth.py  test_backends.py  test_backends_multimodal.py  test_classification.py  test_cli_commands.py  test_config.py  test_dispatcher.py  test_files_api.py  test_gpu_allocator.py  test_gpu_scheduler.py  test_hf_resolver.py  test_img2img.py  test_jobs_api.py  test_ollama_resolver.py  test_openai_compat.py  test_orchestrator.py  test_orchestrator_multimodal.py  test_registry.py  test_registry_v2.py  test_remaining_tasks.py  test_rerank.py  test_seq2seq.py  test_tool_calling.py  test_video.py
